# webrtc-delay-estimation

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
include/: webrtc_delay_estimator.h
src/: CMakeLists.txt  aec3_common.cc  aec3_fft.cc  aec3_fft.h  alignment_mixer.cc  alignment_mixer.h  apm_data_dumper.cc  apm_data_dumper.h  array_view.h  audio_util.h  block_buffer.cc  block_buffer.h  cascaded_biquad_filter.cc  cascaded_biquad_filter.h  checks.cc  checks.h  cpu_features.cc  cpu_features_linux.cc  decimator.h  delay_estimate.h  downsampled_render_buffer.h  echo_canceller3_config.cc  echo_canceller3_config.h  echo_path_delay_estimator.cc  echo_path_delay_estimator.h  fft_buffer.cc  fft_buffer.h  fft_data.h  fft_data_avx2.cc  field_trial.cc  file_wrapper.cc  logging.cc  logging.h  main.cc  matched_filter.cc  matched_filter.h  matched_filter_avx2.cc  matched_filter_lag_aggregator.cc  matched_filter_lag_aggregator.h  mutex.cc  (+33 more)
tests/: CMakeLists.txt  random_delay_estimation_header_test.cc  random_delay_estimation_test.cc  test_tools.cc  test_tools.h
tools/: delay_wav.py  random_wav.py
